--- a/css/main.css
+++ b/css/main.css
@@ -127,10 +127,20 @@ select.form-novelty {
 .four-five { grid-area: four-five; background-color: #fec6c6; }
 .five-five { grid-area: five-five; background-color: #fec6c6; }
 
-.b-example-divider {
+.vertical-divider {
   flex-shrink: 0;
   width: 1.5rem;
   min-height: 100vh;
+  background-color: rgba(0, 0, 0, .1);
+  border: solid rgba(0, 0, 0, .15);
+  border-width: 1px 0;
+  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+}
+
+.horizontal-divider {
+  flex-shrink: 0;
+  width: 100%;
+  height: 1.5rem;
   background-color: rgba(0, 0, 0, .1);
   border: solid rgba(0, 0, 0, .15);
   border-width: 1px 0;
